--- a/src/app/users/users-dashboard/users-dashboard.component.html
+++ b/src/app/users/users-dashboard/users-dashboard.component.html
@@ -1,32 +1,42 @@
-<div id="table">
-    <table border="1px black">
-        <tr id="table-headers">
-            <th>
-                ID
-            </th>
-            <th>
-                NAME
-            </th>
-            <th>
-                USERNAME
-            </th>
-            <th>
-                EMAIL
-            </th>
-            <th>
-                PHONE
-            </th>
-            <th>WEBSITE</th>
-        </tr>
+<table mat-table [dataSource]="users" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element">{{element.id}}</td>
+    </ng-container>
 
-        <tr class="data-user" *ngFor="let user of users">
-            <td>{{user.id}}</td>
-            <td>{{user.name}}</td>
-            <td>{{user.username}}</td>
-            <td>{{user.email}}</td>
-            <td>{{user.phone}}</td>
-            <td>{{user.website}}</td>
-        </tr>
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> NAME </th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
+    </ng-container>
 
-    </table>
-</div>
+    <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef> USERNAME </th>
+        <td mat-cell *matCellDef="let element">{{element.username}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> EMAIL </th>
+        <td mat-cell *matCellDef="let element">{{element.email}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef> PHONE </th>
+        <td mat-cell *matCellDef="let element">{{element.phone}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="website">
+        <th mat-header-cell *matHeaderCellDef> WEBSITE </th>
+        <td mat-cell *matCellDef="let element">{{element.website}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
+
+<h1> FORMULARIO DE USUARIOS</h1>
+
+<app-edit-user-form 
+[user]="selectedUser" [disabled]="true"
+(eventEmitter)="addUser($event)"
+></app-edit-user-form>
